--- a/.classpath
+++ b/.classpath
@@ -90,5 +90,6 @@
 	<classpathentry kind="lib" path="/Users/karishmakate/Downloads/selenium-java-4.27.0/selenium-support-4.27.0-sources.jar"/>
 	<classpathentry kind="lib" path="/Users/karishmakate/Downloads/selenium-java-4.27.0/selenium-support-4.27.0.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/karishmakate/Downloads/apache-log4j-1.2.17/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
