--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-21">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-22"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/Users/karishmakate/Downloads/selenium-java-4.27.0/auto-service-annotations-1.1.1-sources.jar"/>
 	<classpathentry kind="lib" path="/Users/karishmakate/Downloads/selenium-java-4.27.0/auto-service-annotations-1.1.1.jar"/>
