--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-22"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
+		<attributes>
+			<attribute name="module" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="/Users/karishmakate/Downloads/selenium-java-4.27.0/auto-service-annotations-1.1.1-sources.jar"/>
 	<classpathentry kind="lib" path="/Users/karishmakate/Downloads/selenium-java-4.27.0/auto-service-annotations-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/Users/karishmakate/Downloads/selenium-java-4.27.0/byte-buddy-1.15.10-sources.jar"/>
@@ -87,5 +97,11 @@
 	<classpathentry kind="lib" path="/Users/karishmakate/Downloads/selenium-java-4.27.0/selenium-support-4.27.0.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="/Users/karishmakate/Downloads/apache-log4j-1.2.17/log4j-1.2.17.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/karishmakate/Selenium Practice workspace/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
