--- a/pom.xml
+++ b/pom.xml
@@ -3,23 +3,22 @@
   <groupId>Selenium_Java_Project</groupId>
   <artifactId>Selenium_Java_Project</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
+    </properties>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
-			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
-	<plugin>
-	 	<groupId>org.apache.maven.plugins</groupId>
-   	 	<artifactId>maven-compiler-plugin</artifactId>
-    	<version>3.8.1</version>
-	</plugin>
-
-     	 <plugin>
-      	<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
-
-   			 <groupId>org.apache.maven.plugins</groupId>
-   			<artifactId>maven-surefire-plugin</artifactId>
-   			<version>2.19.1</version>
-     	 </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version> <!-- Ensure it's 3.6.0 or newer -->
+            <configuration>
+                <source>21</source>
+                <target>21</target>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -33,9 +32,26 @@
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
-    <version>6.14.3</version>
-    
+    <version>7.7.0</version>
 </dependency>
-
-  </dependencies>
+      <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+          <version>2.17.1</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>2.23.1</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j2-impl -->
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j2-impl</artifactId>
+          <version>2.20.0</version>
+          <scope>test</scope>
+      </dependency>
+</dependencies>
 </project>
